fix too much data loading and gatsby images

--- a/src/components/Pages/Home/styles.module.scss
+++ b/src/components/Pages/Home/styles.module.scss
@@ -1,3 +1,67 @@
+.firstSection {
+    width: 100%;
+    position: relative;
+
+    &__imgStudent {
+        height: 100%;
+        width: 100%;
+    }
+    &__inner {
+            position: absolute;
+            z-index: 1;
+            bottom: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+        }
+    
+    &__overlay {
+            height: 100%;
+            width: 100%;
+            opacity: 90%;
+        }
+
+    &__title {
+        font-weight: bolder !important;
+
+        @media only screen and (max-width: 380px) {
+            margin-top: -1rem !important;
+        }
+        @media only screen and (min-width: 380px) and (max-width: 460px) {
+            margin-top: -1.3rem !important;
+        }
+    }
+
+    &__desc {
+        @media only screen and (max-width: 380px) {
+            margin-top: -2rem;
+            font-size: small;
+        }
+        @media only screen and (min-width: 380px) and (max-width: 460px) {
+            margin-top: -2.3rem !important;
+        }
+    }
+
+    &__btn {
+        height: 50px;
+        width: 200px;
+        color: black;
+        font-size: 12px;
+        background-color: #fbc403;
+        border: 1px solid #ffffff;
+        border-radius: 18px;
+        transition: background-color 0.8s;
+        text-transform: uppercase;
+
+        @media only screen and (max-width: 380px) {
+            height: 40px;
+            width: 150px;
+            font-size: 10px;
+        }
+    }
+
+}
+
 .container {
     width: 100%;
 }
@@ -290,31 +354,6 @@
 .mobileModalText {
     line-height: 1.2rem !important;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.parent {
-    width: 100%;
-    position: relative;
-}
-
-.parent>img {
-    height: 100%;
-    width: 100%;
-}
-
-.inner {
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-}
-
-.inner>img {
-    height: 100%;
-    width: 100%;
-    opacity: 90%;
 }
 
 
@@ -633,34 +672,40 @@
     }
 }
 
-.header {
+.about {
     &__title {
-    font-weight: bolder !important;
-        @media only screen and (max-width: 380px) {
-            margin-top: -1rem !important;   
-        }
+        color: #0490DF;
+        font-weight: 900;
+        font-size: 2.3rem;
     }
-    &__desc {
-        @media only screen and (max-width: 380px) {
-            margin-top: -2rem;
-            font-size:small;
-        }
-    }
-    &__btn {
-               height: 50px;
-               width: 200px;
-               color: black;
-               font-size: 12px;
-               background-color: #fbc403;
-               border: 1px solid #ffffff;
-               border-radius: 18px;
-               transition: background-color 0.8s;
-               text-transform: uppercase;
 
-                @media only screen and (max-width: 380px) {
-                        height: 40px;
-                        width: 150px;
-                        font-size: 10px;
-                }
+    &__description {
+        font-size: 1.2rem;
+        line-height: 0;
     }
+
+    &__btn {
+        font-size: 12px;
+        height: 45px;
+        font-weight: 500;
+    }
+
+    &__values_title {
+        color: #0490DF;
+        font-size: 19px;
+    }
+}
+
+.ellipse3 {
+    position: absolute;
+    right: 0;
+    top: 70px;
+    z-index: -10;
+}
+
+.ellipse4 {
+    position: absolute;
+    right: 0;
+    top: 70px;
+    z-index: -10;
 }
